--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world GitHub Pages
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+	<meta charset="UTF-8">
+	<title>CrossCoop Github Test</title>
+</head>
+<body>
+	<h1>Cross Github Test</h1>
+</body>
+</html>
